# dailyreps-backup-server

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  fly.toml
docs/: FLYIO_ARCHITECTURE.md  REFACTORING_PLAN.md
migrations/: 20251209000001_create_users.sql  20251209000002_create_backups.sql  20251209000003_create_rate_limits.sql
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  security.rs
src/db/: mod.rs  pool.rs  tables.rs
src/models/: backup.rs  mod.rs  rate_limit.rs  user.rs
src/routes/: admin.rs  backup.rs  delete.rs  health.rs  mod.rs  register.rs  validation.rs
tests/: integration_tests.rs
