[package]
name = "dailyreps-backup-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database - embedded key-value store
redb = "2"
bincode = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Crypto (minimal - most crypto happens client-side)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12"
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
