[package]
name = "dailyreps-backup-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database - embedded key-value store
redb = "3"
bincode = { version = "2", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Crypto (minimal - most crypto happens client-side)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = "0.12"
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
